Fixed mobile menu overlap on desktop

--- a/src/styles/_navigationmenu.scss
+++ b/src/styles/_navigationmenu.scss
@@ -62,6 +62,7 @@ nav.navigation-menu {
   }
   @media screen and (min-width: 769px) {
     .mobile-menu {
+      display: none;
       opacity: 0;
       transition: opacity 1s;
     }
